src-built-in/components/appLauncher2/style.css
/* ... */
img {
    user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}
.pointer {
    cursor: pointer;
}

#wrapper {
    height: 100%;
}
.top {
    margin-top: 10px;
}
.folder-list {
    margin-top: 10px;
    max-height: 245px;
    overflow: auto;
}
.bottom {
    position: absolute;
    bottom: 12px;
}

.complex-menu-wrapper {
    display: flex;
    height: 100%;
    overflow: hidden;
    justify-content: flex-start;
}

.complex-menu-left-nav-header-img {
    width: 29px;
    height: 31px;
    margin-right: 15px;
    padding-left: 13px;
    padding-top: 11px;
    padding-bottom: 7px;
}

.complex-menu-content-section, .complex-menu-left-nav {
    display: flex;
}

.complex-menu-left-nav {
    width: 125px;
    font-size: 12px;
    flex-direction: column;
    color: var(--content-font-color);
    background-color: var(--content-nav-background-color);
}

.left-nav-label {
    display: flex;
    align-items: flex-start;
}

.complex-menu-left-nav-header {
    background-color: var(--content-nav-header-background-color);
    font-weight: var(--content-nav-header-font-weight);
    font-size: var(--content-nav-header-font-size);
    margin-bottom: 30px;
    padding-left: 30px;
    height: 49px;
    display: flex;
    align-items: center;
    align-content: center;
}

.complex-menu-header-wrapper {
    display: flex;
    justify-content: space-between;
}

.content-section-header {
    display: flex;
    flex-direction: row;
    align-self: flex-start;
    font-size: var(--content-header-font-size);
    font-weight: bold;
    color: var(--content-header-font-color);
    margin-bottom: 4px;
}

.content-section-info {
    color: var(--content-hint-font-color);
    font-weight: var(--content-font-weight);
    font-size: 12px;
    align-items: center;
    display: flex;
}

.workspace-list-header > .content-section-info {
    margin-left: 275px;
    margin-top: 6px;
    margin-bottom: 4px;
}

.content-section-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.workspace-content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.user-preferences {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.complex-menu-header {
    display: flex;
    justify-content: Space-between;
    padding: 6px 6px 0px 11px;
    font-size: 18px;
}

.ff-close {
    cursor: pointer;
}

.ff-close:hover {
    color: var(--content-close-hover-color);
}

.complex-menu-section-toggle {
    padding: 5px 12px 5px 0px;
    padding-left: 10px;
    display: flex;
    align-items: center;
}

.left-nav-label .ff-favorite {
    color: var(--yellow3);
}

.complex-menu-section-toggle i {
    padding-right: 4px;
    font-size: 13px;
    color: var(--blue3);
}

.complex-menu-section-toggle:hover {
    cursor: pointer;
    background-color: var(--content-nav-highlighter-hover);
}

.active-section-toggle {
    background-color: var(--content-nav-highlighter);
}

.complex-menu-content-row {
    flex: 1;
    padding: .75em .75em .75em 0;
    align-content: flex-start;
    background-color: #495a69;
}

.workspace-list-header-row {
    padding: 0px;
}

#UserPreferences-component-wrapper {
    height: 100%;
    width: 100%;
}

.complex-menu-content-section {
    display: flex;
    flex-direction: row;
}

.workspace-section-wrapper {
    display: flex;
    justify-content: space-between;
}

.workspace-list {
    border: 1px solid var(--content-list-border-color);
    width: 100%;
    height: 210px;
    overflow-y: auto;
    margin-right: 16px;
}

.workspace-item {
    user-select: none;
    height: 28px;
    padding: 4px 10px 0 20px;
    display: flex;
    align-items: center;
    border: 1px solid transparent;
}

.workspace-item > div {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    outline-color: transparent;
    justify-content: space-between;
}

.workspace-item > div > .workspace-name {
    width: 250px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.individual-workspace-actions {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 50px;
}

.individual-workspace-action {
    margin-left: 1px;
    cursor: pointer;
    padding: 2px;
    height: 17px;
    border: 1px solid transparent;
    font-weight: 100 !important;
}

.individual-workspace-action > i:before {
    padding-top: 2px;
}

.ff-delete:hover {
    background-color: transparent;
}

.individual-workspace-action:hover {
    border: 1px solid var(--content-button-neutral-border-hover-color);
    border-radius: 4px;
    height: 17px;
}

.delete-workspace:hover {
    border: 1px solid var(--content-button-negative-border-hover-color);
}

.active-workspace {
    font-style: italic;
}

.focused-workspace-item {
    background-color: var(--content-list-highlighter);
}

.auto-start-workspace-item:before {
    content: "";
    width: 5px;
    height: 5px;
    display: inline-block;
    border-radius: 50%;
    margin-left: -15px;
    margin-right: 10px;
    background-color: var(--content-list-item-flagged-color);
}

.action-button {
    border: 1px solid var(--button-neutral-border-hover-color);
    padding: .25em 0;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 16px 0 6px 0;
}

.action-button:hover {
    cursor: pointer;
    border: solid 1px var(--content-button-neutral-border-hover-color);
}

.disabled-button, .disabled-button:hover {
    border: 1px solid var(--content-button-disabled-border-color);
    color: var(--content-button-disabled-border-color);
    cursor: not-allowed;
}

.workspace-action-buttons {
    display: flex;
    justify-content: space-between;
}

.workspace-action-button {
    width: 69px;
    height: 69px;
    font-size: var(--content-button-label-font-size);
    display: flex;
    flex-direction: column;
}
/* ... */

